force-app/main/default/objects/Account/fields/IsStateCorrectFormated__c.field-meta.xml
<CustomField>
    <fullName>IsStateCorrectFormated__c</fullName>
    <formula>ISPICKVAL( Rating , &apos;Hot || Cold&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsRatingHot</label>
    <type>Checkbox</type>
</CustomField>