force-app/main/default/objects/Account/validationRules/AccountNumberCanNotBeChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNumberCanNotBeChanged</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(AccountNumber) &amp;&amp; NOT(ISBLANK( PRIORVALUE(AccountNumber))),  NOT( ISBLANK(AccountNumber) ))</errorConditionFormula>
    <errorMessage>Account Number Can Not Be Changed</errorMessage>
</ValidationRule>