force-app/main/default/objects/Account/validationRules/EmployeeCanNotBeNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>EmployeeCanNotBeNegative</fullName>
    <active>true</active>
    <errorConditionFormula>NumberOfEmployees &lt; 0</errorConditionFormula>
    <errorDisplayField>NumberOfEmployees</errorDisplayField>
    <errorMessage>Employee Fieldi Can Not Be Negative</errorMessage>
</ValidationRule>