force-app/main/default/objects/Account/validationRules/Https_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Https_Check</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( 
    BEGINS(Website  , &quot;https://&quot;) 
   )</errorConditionFormula>
    <errorDisplayField>Website</errorDisplayField>
    <errorMessage>Web Sitesi &apos;http&apos; Protokolu Icermeli, Tamami Kucuk Harf Olmali.</errorMessage>
</ValidationRule>