force-app/main/default/objects/Account/validationRules/Phone_Must_Be_11_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Must_Be_11_Digits</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT(ISBLANK( Phone )),   
      OR( LEN( Phone )  &lt;&gt; 11 ,  
         NOT(ISNUMBER( Phone )))
     )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone Number Must Be 11 Digits</errorMessage>
</ValidationRule>