force-app/main/default/objects/Account/validationRules/Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>AND(CONTAINS(&apos;Technology:Media:Retail&apos;,TEXT(Industry)), ISBLANK(Website))</errorConditionFormula>
    <errorDisplayField>Industry</errorDisplayField>
    <errorMessage>When Industry Field Is Tecnology, Website,Ritail,Media Is Not Blank.</errorMessage>
</ValidationRule>